# werq

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  env.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
src/dirq/: __init__.py  dirq.py  exceptions.py
src/dirq/cli/: __init__.py  submit.py  worker.py
tests/: test_dirq.py
