[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=dirq"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-local-folder = ["dirq"]

[tool.setuptools_scm]
version_file = "src/dirq/__version.py"
version_file_template = '__version__ = "{version}"'
fallback_version = "0.0"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
