[project]
name = "dirq"
version = "0.4.0"
description = "Simple directory-based job queue for Python"
readme = "README.md"
authors = [{ name = "Vojtech Micka", email = "vojtech@nnaisense.com" }]
requires-python = ">=3.11"
dependencies = ["filelock>=3.16.1", "pandas>=2.2.3", "rich>=13.9.4"]

[project.scripts]
dirq = "dirq.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=dirq"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-local-folder = ["dirq"]

[tool.setuptools_scm]
version_file = "src/dirq/__version.py"
version_file_template = '__version__ = "{version}"'
fallback_version = "0.0"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
]
