[project]
name = "dirq"
dynamic = ["version"]
description = "Simple directory-based job queue for Python"
readme = "README.md"
license = "MIT"
authors = [{ name = "Vojtech Micka", email = "micka.vojtech@gmail.com" }]
requires-python = ">=3.11"
keywords = ["queue", "job-queue", "task-queue", "directory-queue"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["filelock>=3.16.1", "pandas>=2.2.3", "rich>=13.9.4"]

[project.scripts]
dirq = "dirq.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov=dirq"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q", "D"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-local-folder = ["dirq"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
bump = true
fallback-version = "0.0.0"
pattern = "default-unprefixed"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/dirq/__version.py"
template = '''
__version__ = "{version}"
'''

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
]
