# Find out more about setup.cfg and what options are available here:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = dirq
description = Simple file-based job queue
long_description = file: README.md
author = Vojtech Micka
author_email = vojtech@nnaisense.com
keywords = python
license = MIT Licence
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.11
	Topic :: Utilities
	Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.11
package_dir =
    =src
packages = find:
tests_require =
    dirq[test]
install_requires =
    filelock
    pandas
    rich

[options.entry_points]
console_scripts =
    dirq = dirq.cli:main

[options.package_data]
* = *.txt, *.md, *.rst

[options.packages.find]
where = src

[options.extras_require]
# Test dependencies
test =
    pytest
    pytest-cov
# Documentation dependencies
doc =
# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit
    ruff
    %(test)s
    %(doc)s

[mypy]
files=src/**/*.py, run/*.py, test/*.py
ignore_missing_imports=true

[flake8]
extend-exclude = src/dirq/__version.py
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E231, E501, W503, F403
